After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700933 - avidemux: Wrong duration in push mode for some clips.
avidemux: Wrong duration in push mode for some clips.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.28
Other Linux
: Normal normal
: 1.1.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-24 05:12 UTC by srkreddy
Modified: 2013-07-28 15:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst-plugins-good avidemux duration query patch. (601 bytes, patch)
2013-05-24 05:12 UTC, srkreddy
committed Details | Review

Description srkreddy 2013-05-24 05:12:47 UTC
Created attachment 245211 [details] [review]
gst-plugins-good avidemux duration query patch.

AVI demux reports wrong duration info for some samples.

Usually in pull mode the duration was calculated from indexing information which is always accurate (stream->duration).

In PUSH mode duration was taken from header(If stream->duration is invalid avi->duration is takes into consideration) which some times wrong for some samples.

In this case the stream->hdr_duration contains the appropriate duration info.

Changing the duration query logic to take stream->hdr_duration into consideration before falling back to avi->duration seems to be working fine with these samples.

Please find the attached patch which is working for these samples.
Comment 1 Tim-Philipp Müller 2013-05-24 05:59:10 UTC
thanks for the patch. could you make one or more of such files available by any chance?
Comment 2 srkreddy 2013-05-24 08:46:03 UTC
Here is one such sample.
https://mega.co.nz/#!y14QhbYQ!XusmfHIxOnjyK3ihjC9oM3uCu-8U7N9Ns2xSGK5-lKk


SRK
Comment 3 Tim-Philipp Müller 2013-05-24 18:07:55 UTC
Thanks, but that link/site doesn't work for me with any browser I have installed. It always tells me that this site doesn't support my browser and asks me to update chrome/mozilla...
Comment 4 srkreddy 2013-05-28 07:05:40 UTC
Please take the sample from the below location.

http://pan.baidu.com/share/link?shareid=480484&uk=2720393903 

Password:o6qp

Siva
Comment 5 Sebastian Dröge (slomo) 2013-07-26 10:36:00 UTC
Comment on attachment 245211 [details] [review]
gst-plugins-good avidemux duration query patch.

The patch makes sense, but which of the many files is it?
Comment 7 Sebastian Dröge (slomo) 2013-07-28 15:39:33 UTC
commit 1fbb6d30a6a6fab97e54bc780fed781c5537fb65
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Sun Jul 28 17:38:56 2013 +0200

    avidemux: Fix duration reporting in push mode
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700933