avidemux: Fix duration reporting in push mode

https://bugzilla.gnome.org/show_bug.cgi?id=700933